# tephra

./: .gitignore  Cargo.toml  IDEAS_FOR_FUTURE_IMPROVEMENT.md  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
crates/ignis/: Cargo.toml
crates/ignis-command/: Cargo.toml
crates/ignis-command/src/: barriers.rs  command_buffer.rs  indirect_layout.rs  lib.rs  linear_alloc.rs  state.rs
crates/ignis-core/: Cargo.toml
crates/ignis-core/src/: buffer.rs  buffer_pool.rs  context.rs  cookie.rs  device.rs  external.rs  format.rs  frame_context.rs  handles.rs  image.rs  lib.rs  linear_alloc.rs  memory.rs  post_mortem.rs  quirks.rs  renderdoc.rs  resource_manager.rs  resources.rs  rtas.rs  sampler.rs  submission.rs  sync.rs  video.rs
crates/ignis-descriptors/: Cargo.toml
crates/ignis-descriptors/src/: binding_table.rs  bindless.rs  cache.rs  descriptor_buffer.rs  lib.rs  set_allocator.rs  update.rs
crates/ignis-graph/: Cargo.toml
crates/ignis-graph/src/: alias.rs  allocate.rs  compile.rs  execute.rs  graph.rs  lib.rs  pass.rs  resource.rs  subpass_merge.rs
crates/ignis-pipeline/: Cargo.toml
crates/ignis-pipeline/src/: async_pipeline.rs  draw_context.rs  fossilize.rs  lib.rs  pipeline.rs  pipeline_binary.rs  pipeline_cache.rs  program.rs  render_pass.rs  render_state.rs  shader.rs  shader_manager.rs  shader_variant.rs
crates/ignis-wsi/: Cargo.toml
crates/ignis-wsi/src/: hdr.rs  headless.rs  lib.rs  platform.rs  pre_rotation.rs  swapchain.rs  wsi.rs
crates/ignis/benches/: descriptor_cache.rs  pipeline_cache.rs  state_hashing.rs
crates/ignis/examples/: 01_triangle.rs  02_textured_quad.rs  03_multi_pass.rs  04_render_graph.rs  05_compute.rs  06_async_transfer.rs  07_dynamic_rendering.rs  08_push_descriptors.rs  09_bindless.rs  10_async_pipeline.rs  11_compute_variants.rs  12_headless_render.rs  13_mipmap_generation.rs  14_gpu_timestamps.rs  15_state_save_restore.rs
crates/ignis/shaders/: bindless.frag  fullscreen.vert.spv  postprocess.frag  quad.frag  quad.frag.spv  quad.vert
crates/ignis/src/: lib.rs  prelude.rs  renderer.rs
crates/ignis/tests/: validation_descriptors.rs  validation_harness.rs  validation_headless.rs  validation_pipelines.rs
crates/tephra/: Cargo.toml
crates/tephra-command/: Cargo.toml
crates/tephra-command/src/: barriers.rs  linear_alloc.rs  query_pool.rs  state.rs
crates/tephra-core/: Cargo.toml
crates/tephra-core/src/: buffer.rs  buffer_pool.rs  context.rs  device.rs  external.rs  frame_context.rs  handles.rs  image.rs  lib.rs  linear_alloc.rs  memory.rs  quirks.rs  renderdoc.rs  resources.rs  rtas.rs  sampler.rs  sync.rs  video.rs
crates/tephra-descriptors/: Cargo.toml
crates/tephra-descriptors/src/: binding_table.rs  bindless.rs  cache.rs  descriptor_buffer.rs  set_allocator.rs
crates/tephra-graph/: Cargo.toml
crates/tephra-graph/src/: allocate.rs  compile.rs  execute.rs  graph.rs  pass.rs  subpass_merge.rs
crates/tephra-pipeline/: Cargo.toml
crates/tephra-pipeline/src/: async_pipeline.rs  draw_context.rs  framebuffer_cache.rs  lib.rs  pipeline.rs  pipeline_binary.rs  program.rs  render_pass.rs  render_state.rs  shader_manager.rs  shader_variant.rs
crates/tephra-wsi/: Cargo.toml
crates/tephra-wsi/src/: lib.rs  wsi.rs
crates/tephra/benches/: descriptor_cache.rs  pipeline_cache.rs  state_hashing.rs
crates/tephra/examples/: 01_triangle.rs  02_textured_quad.rs  03_multi_pass.rs  04_render_graph.rs  05_compute.rs  06_async_transfer.rs  07_dynamic_rendering.rs  08_push_descriptors.rs  09_bindless.rs  10_async_pipeline.rs  11_compute_variants.rs  12_headless_render.rs  13_mipmap_generation.rs  14_gpu_timestamps.rs  15_state_save_restore.rs
crates/tephra/shaders/: bindless.frag.spv  double.comp  double.comp.spv  fill_color.frag  fullscreen.vert  postprocess.frag.spv  quad.vert.spv  scale.comp  scale.comp.spv
crates/tephra/src/: lib.rs  prelude.rs  renderer.rs
crates/tephra/tests/: validation_descriptors.rs  validation_frame_loop.rs  validation_harness.rs  validation_headless.rs  validation_pipelines.rs
docs/: architecture.md  getting_started.md
