[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshburgess/tephra_"

[workspace.dependencies]
# Vulkan bindings
ash = "0.38"
gpu-allocator = { version = "0.27", features = ["vulkan"] }
spirv-reflect = "0.2"

# Windowing
winit = "0.30"
raw-window-handle = "0.6"
ash-window = "0.13"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
parking_lot = "0.12"
rustc-hash = "2.0"
bitflags = "2.6"
thiserror = "2.0"
bytemuck = { version = "1.18", features = ["derive"] }
notify = "7.0"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Internal crates
tephra-core = { path = "crates/tephra-core" }
tephra-command = { path = "crates/tephra-command" }
tephra-descriptors = { path = "crates/tephra-descriptors" }
tephra-pipeline = { path = "crates/tephra-pipeline" }
tephra-wsi = { path = "crates/tephra-wsi" }
tephra-graph = { path = "crates/tephra-graph" }

# spirv-reflect 0.2.3 has a UB bug: slice::from_raw_parts(null, 0) in convert.rs.
# Disable debug-mode UB checks for that crate until upstream fixes it.
[profile.dev.package.spirv-reflect]
debug-assertions = false
