[package]
name = "ignis-descriptors"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Descriptor set allocation, slot-based binding model, hash-and-cache"

[dependencies]
ash = { workspace = true }
gpu-allocator = { workspace = true }
ignis-core = { workspace = true }
log = { workspace = true }
rustc-hash = { workspace = true }
bytemuck = { workspace = true }
