[package]
name = "ignis-pipeline"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shader reflection, program linking, lazy pipeline compilation, render pass cache"

[dependencies]
ash = { workspace = true }
ignis-core = { workspace = true }
ignis-command = { workspace = true }
ignis-descriptors = { workspace = true }
spirv-reflect = { workspace = true }
log = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true }
notify = { workspace = true, optional = true }

[features]
hot-reload = ["dep:notify"]
