[package]
name = "tephra-wsi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Windowing system integration: swapchain management, platform abstraction"

[dependencies]
ash = { workspace = true }
ash-window = { workspace = true }
gpu-allocator = { workspace = true }
tephra-core = { workspace = true }
winit = { workspace = true }
raw-window-handle = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
